<resources>
    <string name="currmapskey">00QBbEmEdARzUcH8V6T_tu6dAyySsfVNOxBlGpg</string>
    <string name="mapskey">00QBbEmEdARzUcH8V6T_tu6dAyySsfVNOxBlGpg</string>
    <string name="debugmapskey">0Z7VvIallZD53dwv1U0ALMKzB1oAnUWIboA0GXw</string>
    <string name="copyright">2012 PublicStuff</string>
    <string name="app_name">PublicStuff</string>
	<string name="cityName">Cityname, ST</string>
	<string name="cityImageDescr">City Image</string>
	<string name="arrowDescr">Arrow</string>
    <string name="stuffText">My Stuff Page</string>
    <string name="exitButtonText">Click To Return</string>
    <string name="exitRequestScreenDescr">Exit New Request Screen</string>
    <string name="exitProfileScreenDescr">Exit Profile Screen Screen</string>
	<string name="middleButtonDescr">middleTabViewButton</string>
    <string name="select_request_type_title">Choose a Request Type</string>
    <string name="main_no_items">No requests to display</string>
    <string name="detailsLabel">DETAILS</string>
    <string name="addressLabel">Address</string>
    <string name="addressPlaceholder"/>
    <string name="idLabel">ID</string>
    <string name="idPlaceholder">12345</string>
    <string name="backNavigation">Back</string>
    <string name="cityIcon">City Icon</string>
    <string name="socialMedia">Share through social media</string>
    <string name="requestInfo">INFO</string>
    <string name="commentsPlaceholder">COMMENTS</string>
    <string name="locationPlaceholder"/>
    <string name="statusLabel">STATUS</string>
    <string name="statusPlaceholder"/>
    <string name="descriptionLabel">DESCRIPTION</string>
    <string name="descriptionPlaceholder"/>
    <string name="priorityLabel">Priority</string>
    <string name="priorityPlaceholder"/>
    <string name="categoryLabel">Category</string>
    <string name="categoryPlaceholder"/>
    <string name="submittedByLabel">Submitted By</string>
    <string name="submittedByPlaceholder"/>
    <string name="submittedOnLabel">Submitted On</string>
    <string name="submittedOnPlaceholder"/>
    <string name="fav_activity_title">Share</string>
    <string name="allservice_activity_title">Find a service</string>
    <string name="nonetwork_msg">No network available</string>
    <string name="loading_please_wait_msg">Loading, please wait …</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="loging_out">Logging out…</string>
    <string name="confirm">Confirm</string>
    <string name="delete_msg">Delete this favorite?</string>
    <string name="send_email">Send Mail</string>
    <string name="editview_info_text">Add or Remove services in this list. Tap the plus sign from the Action bar above to add more services. Long press a particular service to delete. Tap the back button to go back to the normal view.</string>
    <string name="external_memory_for_image">External memory card should be present for sharing the image through email</string>
    <string name="an_error_occured">An error occurred, please try again later</string>
    <string name="uploading_please_wait">Uploading. Please wait…</string>
    <string name="connecting_twitpic">Connecting TwitPic…</string>
    <string name="posting_the_tweet">Posting the message…</string>
    <string name="successfully_posted">Successfully posted</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="image_attached">Image Attached</string>
    <string name="passwordConfirmation">New Password\nConfirmation</string>
    <string name="titlePlaceholder">Title</string>
    <string name="notificationTextPlaceholder">Someone replied to a comment you made on a request</string>
    <string name="timeAgoPlaceholder">6 months ago</string>
    <string name="loading">Requesting&#8230;</string>
    <string name="required">*</string>
    <string name="selectCity">SELECT A DEFAULT CITY</string>
    <string name="attachImage">Attach an Image</string>
    <string name="back">Back</string>
    <string name="createAccount">Create Account</string>
    <string name="cancelButton">Cancel</string>
    <string name="cityIconDesc">City Icon</string>
    <string name="filterRequests">Filter Requests</string>
    <string name="confirmButton">Confirm</string>
    <string name="findLocation">Find your Location</string>
    <string name="mySettings">My Settings</string>
    <string name="save">SAVE</string>
    <string name="newRequest">New Request</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="loginTitle">Login</string>
    <string name="aboutPublicStuff">About PublicStuff</string>
    <string name="myStuff">My Stuff</string>
    <string name="openSettings">Open Settings</string>
    <string name="done">DONE</string>
    <string name="fieldIsPublic">Information entered here will be visible to the public</string>
    <string name="enterAddress">Enter Address</string>
    <string name="post">POST</string>
    <string name="aboutPublicstuff">We’re working to make local governments
        open, accessible, and responsive.
    </string>
    <string name="openMenu">Open Menu</string>
    <string name="searchCity">Search for a city</string>
    <string name="skip">Skip</string>
    <string name="list">LIST</string>
    <string name="gallery">GALLERY</string>
    <string name="map">MAP</string>
    <string name="termsConditions"><![CDATA[Terms & Conditions]]></string>
    <string name="email">Email</string>
    <string name="aboutForgotPassword">When you reset your password, you
        will get an email from PublicStuff giving
        you instructions on how to create a new
        password. Once you have done that, feel
        free to login with your new password.
    </string>
    <string name="enterCity">Enter city</string>
    <string name="myProfile">MY PROFILE</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="phone">Phone</string>
    <string name="myLocations">MY LOCATIONS</string>
    <string name="home">Home</string>
    <string name="work">Work</string>
    <string name="addressDefault">These addresses can be used as default locations</string>
    <string name="notifications">EMAIL NOTIFICATIONS</string>
    <string name="emailMeWhen">Email me when a request I follow</string>
    <string name="emailReplies">Email replies to my posts</string>
    <string name="pushnotifications">PUSH NOTIFICATIONS</string>
    <string name="pushMeWhen">Notify me when a request I follow</string>
    <string name="pushReplies">Notify me when someone replies to my posts</string>
    <string name="currentLocation">CURRENT LOCATION</string>
    <string name="change">Change</string>
    <string name="logOut">Log Out</string>
    <string name="oldPassword">Old Password</string>
    <string name="newPassword">New Password</string>
    <string name="passwordLength">Passwords must be at least 6 characters</string>
    <string name="sorting">Sorting</string>
    <string name="recent">Recent</string>
    <string name="citySkyline">City Skyline</string>
    <string name="mapInstructions">Move map to change position (zoom in for precision)</string>
    <string name="createAccountDesc">Create an account to track, support, and comment on requests in your community.
    </string>
    <string name="privacyPolicy">Privacy Policy</string>
    <string name="aboutPublicstuffLong">We are an innovative CRM software company that helps you get stuff fixed! Using
        both mobile and web platforms, we have created a comprehensive backend CRM system that allows municipalities,
        facilities and universities to receive service requests from their residents and customers in real time. We have
        helped municipalities save over $360,000 annually with improved communication channels and increased customer
        satisfaction.
    </string>
    <string name="forgotPasswordButton">Forgot Password?</string>
    <string name="questionsFeedback">Send questions and feedback to</string>
    <string name="emailPublicStuff">tech@publicstuff.com</string>
    <string name="about">ABOUT</string>
    <string name="aboutPublicStuffMain">Request and support issues in your city and get notified when they\'re fixed!
    </string>
    <string name="status">Status</string>
    <string name="open">Open</string>
    <string name="filterBy">Filter by</string>
    <string name="sortBy">Sort By</string>
    <string name="nearby">Nearby</string>
    <string name="types">Types</string>
    <string name="allRequestTypes">All Request Types</string>
    <string name="dateRange">Date Range</string>
    <string name="startDate">Start Date</string>
    <string name="endDate">End Date</string>
    <string name="redoSearch">Redo search here</string>
    <string name="titleCaps">TITLE</string>
    <string name="flag">Flag as inappropriate</string>
    <string name="calculatingLocation">Calculating Location</string>
    <string name="requestIsPrivate">This request has been marked as private</string>
    <string name="descriptionHint">Description (Optional)</string>
    <string name="addComment">Add a comment</string>
    <string name="send">Send</string>
    <string name="notifier">Update available.</string>
    <string name="notificationComment">Someone commented on a request that you submitted</string>
    <string name="notificationReply">Someone replied to a comment you made on a request</string>
    <string name="notificationStatus">The status of your request was updated to %s</string>
    <string name="aboutapp">About %s</string>
    <string name="mystuff">My Stuff</string>
    <string name="aboutps">About PublicStuff</string>
    <string name="more">More</string>
    <string name="nearbyRequest">Nearby Requests</string>
    <string name="findingLocation">Finding Location&#8230;</string>
    <string name="getRequestList">Getting request list&#8230;</string>
    <string name="ErrorPastTense">There was an error</string>
    <string name="ErrorInternet">Please check your internet connection and try again</string>
    <string name="OkButton">OK</string>
    <string name="CancelButton">Cancel</string>
    <string name="loadingDialog">Loading&#8230;</string>
    <string name="loginNow">Login</string>
    <string name="pleaseLogin">Please login to follow your city</string>
    <string name="creatingAccount">Creating account&#8230;</string>
    <string name="getcustomFields">Getting custom fields&#8230;</string>
    <string name="bothFields">Both fields are required to login.</string>
    <string name="loggingIn">Logging in&#8230;</string>
    <string name="locationFailGPS">There was an error finding your location. Please check your GPS and internet connectivity.</string>
    <string name="chooseLocation">Choose Location</string>
    <string name="tryAgain">Try Again</string>
    <string name="requestTypes">Getting request types&#8230;</string>
    <string name="geoError">Geolocation error</string>
    <string name="googleGeoError">The Google geolocation server returned bad data about your chosen location. Please try choosing your location again.</string>
    <string name="saveDraft">Save draft</string>
    <string name="deleteDraft">Delete Draft</string>
    <string name="exitSave">Exit without saving</string>
    <string name="resumeDraft">Back to draft</string>
    <string name="exitScreen">Exit</string>
    <string name="loginDraft">You must be logged in to save drafts</string>
    <string name="titleRequired">A Title is required. </string>
    <string name="requestTypeRequired">A request type is required. </string>
    <string name="errorLocationConfirm">There was an error confirming your location. Please select a location by clicking on the address field below.</string>
	<string name="playLicense">Google Play License</string>
</resources>