<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/headerLayout"
        android:layout_width="fill_parent"
        android:layout_height="48dip"
        android:background="@color/TOP_BAR_BACKGROUND"
        android:paddingBottom="8dip"
        android:paddingTop="8dip" >

        <Button
            android:id="@+id/done"
            android:layout_width="48dip"
            android:layout_height="fill_parent"
            android:background="@null"
            android:clickable="true"
            android:onClick="back"
            android:scaleType="centerInside" />

        <ImageView
            android:id="@+id/idBackChevron"
            android:layout_width="16dip"
            android:layout_height="fill_parent"
            android:contentDescription="@string/back"
            android:src="@drawable/holo_dark1_navigation_previous_item" />

        <ImageView
            android:id="@+id/cityIcon"
            android:layout_width="32dip"
            android:layout_height="32dip"
            android:layout_toRightOf="@id/idBackChevron"
            android:contentDescription="@string/cityIcon"
            android:scaleType="fitXY" />

        <TextView
            android:id="@+id/filterTitle"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_toRightOf="@+id/cityIcon"
            android:gravity="center_vertical"
            android:paddingLeft="16dip"
            android:text="@string/filterRequests"
            android:textColor="@color/WHITE"
            android:textSize="18dip"
            android:textStyle="normal" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true" >

            <View
                android:id="@+id/viewSeparator"
                android:layout_width="2dip"
                android:layout_height="fill_parent"
                android:background="@color/TOP_BAR_SEPARATOR" />

            <ImageView
                android:id="@+id/filterSubmitAccept"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_toRightOf="@id/viewSeparator"
                android:background="@null"
                android:scaleType="centerInside"
                android:src="@drawable/holo_dark1_navigation_accept" />

            <Button
                android:id="@+id/filterSubmit"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_toRightOf="@id/viewSeparator"
                android:background="@null"
                android:clickable="true"
                android:onClick="clickSubmit"
                android:paddingLeft="32dip"
                android:paddingRight="16dip"
                android:text="@string/done"
                android:textColor="@color/WHITE"
                android:textSize="16sp" />
        </RelativeLayout>
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/WHITE"
            android:orientation="vertical"
            android:paddingLeft="8dip"
            android:paddingRight="8dip"
            android:paddingTop="8dip" >

            <TextView
                android:id="@+id/sortTextLabel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="center_vertical"
                android:paddingLeft="4dip"
                android:paddingTop="8dip"
                android:singleLine="true"
                android:text="@string/sorting"
                android:textColor="@color/GRAY_TEXT"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/sortText"
                android:layout_width="fill_parent"
                android:layout_height="48dip"
                android:background="@drawable/spinner_default_holo_light"
                android:clickable="true"
                android:editable="false"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:onClick="sort"
                android:paddingLeft="4dip"
                android:singleLine="true"
                android:text="@string/recent"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/statusTextLabel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="center_vertical"
                android:paddingLeft="4dip"
                android:paddingTop="8dip"
                android:singleLine="true"
                android:text="@string/status"
                android:textColor="@color/GRAY_TEXT"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/statusText"
                android:layout_width="fill_parent"
                android:layout_height="48dip"
                android:background="@drawable/spinner_default_holo_light"
                android:clickable="true"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:onClick="status"
                android:paddingLeft="4dip"
                android:singleLine="true"
                android:text="@string/open"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/filterTextLabel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="center_vertical"
                android:paddingLeft="4dip"
                android:paddingTop="8dip"
                android:singleLine="true"
                android:text="@string/filterBy"
                android:textColor="@color/GRAY_TEXT"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/filterText"
                android:layout_width="fill_parent"
                android:layout_height="48dip"
                android:background="@drawable/spinner_default_holo_light"
                android:clickable="true"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:onClick="filter"
                android:paddingLeft="4dip"
                android:singleLine="true"
                android:text="@string/nearby"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/requestTypeTextLabel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="center_vertical"
                android:paddingLeft="4dip"
                android:paddingTop="8dip"
                android:singleLine="true"
                android:text="@string/types"
                android:textColor="@color/GRAY_TEXT"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/requestTypeText"
                android:layout_width="fill_parent"
                android:layout_height="48dip"
                android:background="@drawable/spinner_default_holo_light"
                android:clickable="true"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:onClick="requestType"
                android:paddingLeft="4dip"
                android:singleLine="true"
                android:text="@string/allRequestTypes"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/dateRangeLabel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="center_vertical"
                android:paddingLeft="4dip"
                android:paddingTop="8dip"
                android:singleLine="true"
                android:text="@string/dateRange"
                android:textColor="@color/GRAY_TEXT"
                android:textSize="12sp" />

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/WHITE"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/startDateText"
                    android:layout_width="fill_parent"
                    android:layout_height="48dip"
                    android:layout_weight="1"
                    android:background="@drawable/spinner_default_holo_light"
                    android:clickable="true"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:onClick="startDate"
                    android:paddingLeft="4dip"
                    android:singleLine="true"
                    android:text="@string/startDate"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/endDateText"
                    android:layout_width="fill_parent"
                    android:layout_height="48dip"
                    android:layout_weight="1"
                    android:background="@drawable/spinner_default_holo_light"
                    android:clickable="true"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:onClick="endDate"
                    android:paddingLeft="4dip"
                    android:singleLine="true"
                    android:text="@string/endDate"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>