<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/WHITE"
    android:orientation="vertical" >

    <!-- Top Bar -->

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/headerLayout"
        android:layout_width="fill_parent"
        android:layout_height="48dip"
        android:background="@color/TOP_BAR_BACKGROUND"
        android:paddingBottom="8dip"
        android:paddingTop="8dip" >

        <Button
            android:id="@+id/newRequestDone"
            android:layout_width="48dip"
            android:layout_height="fill_parent"
            android:background="@null"
            android:clickable="true"
            android:onClick="back"
            android:scaleType="centerInside" />

        <ImageView
            android:id="@+id/idBackChevron"
            android:layout_width="16dip"
            android:layout_height="fill_parent"
            android:contentDescription="@string/backNavigation"
            android:src="@drawable/holo_dark1_navigation_previous_item" />

        <ImageView
            android:id="@+id/cityIcon"
            android:layout_width="32dip"
            android:layout_height="32dip"
            android:layout_toRightOf="@id/idBackChevron"
            android:contentDescription="@string/cityIcon"
            android:scaleType="fitXY" />

        <TextView
            android:id="@+id/listViewTitle"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_toRightOf="@+id/cityIcon"
            android:gravity="center_vertical"
            android:paddingLeft="16dip"
            android:text="@string/aboutPublicStuff"
            android:textColor="@color/WHITE"
            android:textSize="18dip"
            android:textStyle="normal" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dip" >

            <ImageView
                android:id="@+id/locationOther"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dip"
                android:background="@null"
                android:scaleType="centerInside"
                android:src="@drawable/ic_light_publicstuff_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingBottom="32dip"
                android:text="@string/aboutPublicstuff"
                android:textColor="@color/DARK_TEXT"
                android:textSize="16dip"
                android:textStyle="normal" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/DARK_TEXT" />

            <Button
                android:id="@+id/currCity"
                android:layout_width="fill_parent"
                android:layout_height="48dip"
                android:background="@null"
                android:clickable="true"
                android:gravity="left|center_vertical"
                android:onClick="termsConditions"
                android:paddingLeft="16dip"
                android:text="@string/termsConditions"
                android:textColor="@color/DARK_TEXT"
                android:textSize="16sp"
                android:textStyle="bold" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/DARK_TEXT" />

            <Button
                android:id="@+id/searchCity"
                android:layout_width="fill_parent"
                android:layout_height="48dip"
                android:background="@null"
                android:clickable="true"
                android:gravity="left|center_vertical"
                android:onClick="privacy"
                android:paddingLeft="16dip"
                android:text="@string/privacyPolicy"
                android:textColor="@color/DARK_TEXT"
                android:textSize="16sp"
                android:textStyle="bold" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/DARK_TEXT" />
            
            <Button
                android:id="@+id/playLicense"
                android:layout_width="fill_parent"
                android:layout_height="48dip"
                android:background="@null"
                android:clickable="true"
                android:gravity="left|center_vertical"
                android:onClick="playLicense"
                android:paddingLeft="16dip"
                android:text="@string/playLicense"
                android:textColor="@color/DARK_TEXT"
                android:textSize="16sp"
                android:textStyle="bold" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/DARK_TEXT" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dip"
                android:gravity="center_horizontal"
                android:text="@string/questionsFeedback"
                android:textColor="@color/DARK_TEXT"
                android:textSize="12dip"
                android:textStyle="normal" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="20dip"
                android:background="@null"
                android:gravity="center_horizontal"
                android:onClick="emailTech"
                android:text="@string/emailPublicStuff"
                android:textColor="@color/BLUE_TEXT"
                android:textSize="12dip"
                android:textStyle="normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/copyright"
                android:textColor="@color/GRAY_TEXT"
                android:textSize="12dip"
                android:textStyle="normal" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>